--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <br>
 <div class="card">
   <div class="card-header">
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
@@ -7,6 +8,16 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
+  <div class="field">
+    <%= f.label :User_Name %><br />
+    <%= f.text_field :username, autofocus: true, autocomplete: "email" , class:"form-control" %>
+  </div>
+  <br>
+  <div class="field">
+    <%= f.label :Mobile_no %><br />
+    <%= f.number_field :mobile_no, autofocus: true, autocomplete: "off" , class:"form-control", unique: true %>
+  </div>
+  <br>
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email",class:"form-control" %>
