--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <br>
 <div class="card">
   <div class="card-header">
     <h2>Sign up</h2> 
@@ -6,7 +7,16 @@
   <div class="card-body">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
-
+  <div class="field">
+    <%= f.label :User_Name %><br />
+    <%= f.text_field :username, autofocus: true, autocomplete: "off" , class:"form-control", unique: true %>
+  </div>
+  <br>
+  <div class="field">
+    <%= f.label :Mobile_no %><br />
+    <%= f.number_field :mobile_no, autofocus: true, autocomplete: "off" , class:"form-control", unique: true %>
+  </div>
+  <br>
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control" %>
